--- a/ShoppersParadiseMailingServiceApp/Web.config
+++ b/ShoppersParadiseMailingServiceApp/Web.config
@@ -11,7 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-ShoppersParadiseMailingServiceApp-20140711103336.mdf;Initial Catalog=aspnet-ShoppersParadiseMailingServiceApp-20140711103336;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="ShoppersParadiseMailingServiceAppEntities" connectionString="metadata=res://*/Models.MailingServiceModel.csdl|res://*/Models.MailingServiceModel.ssdl|res://*/Models.MailingServiceModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=ShoppersParadiseMailingServiceApp;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <add name="MongoDB" connectionString="mongodb://admin:Spz123456@kahana.mongohq.com:10001/shoppersparadise" />
+</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
