--- a/ShoppersParadiseMailingServiceApp/ShoppersParadiseMailingServiceApp.csproj
+++ b/ShoppersParadiseMailingServiceApp/ShoppersParadiseMailingServiceApp.csproj
@@ -193,14 +193,19 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\NoteController.cs" />
+    <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Controllers\SubscribeController.cs" />
     <Compile Include="Controllers\UnSubscribeController.cs" />
+    <Compile Include="DAL\GenerateSlug.cs" />
+    <Compile Include="DAL\MongoHelper.cs" />
     <Compile Include="DAL\SubscriberDal.cs" />
     <Compile Include="DAL\NoteDal.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Comments.cs" />
+    <Compile Include="Models\Company.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\MailingServiceModel.Context.cs">
       <AutoGen>True</AutoGen>
@@ -218,6 +223,7 @@
       <DependentUpon>MailingServiceModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\Note.cs" />
+    <Compile Include="Models\Post.cs" />
     <Compile Include="Models\Subscriber.cs" />
     <Compile Include="Models\Subscribe.cs">
       <DependentUpon>MailingServiceModel.tt</DependentUpon>
@@ -226,6 +232,8 @@
       <DependentUpon>MailingServiceModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\CompanyService.cs" />
+    <Compile Include="Service\PostService.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -312,6 +320,11 @@
     <Content Include="Views\Home\Blog.cshtml" />
     <Content Include="Views\Note\Index.cshtml" />
     <Content Include="Views\Note\Create.cshtml" />
+    <Content Include="Views\Post\Index.cshtml" />
+    <Content Include="Views\Post\Edit.cshtml" />
+    <Content Include="Views\Post\Delete.cshtml" />
+    <Content Include="Views\Post\Create.cshtml" />
+    <Content Include="Views\Post\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
