Added Company Model, Service and Views

--- a/ShoppersParadiseMailingServiceApp/ShoppersParadiseMailingServiceApp.csproj
+++ b/ShoppersParadiseMailingServiceApp/ShoppersParadiseMailingServiceApp.csproj
@@ -191,6 +191,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CompanyController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\NoteController.cs" />
     <Compile Include="Controllers\PostController.cs" />
@@ -325,6 +326,8 @@
     <Content Include="Views\Post\Delete.cshtml" />
     <Content Include="Views\Post\Create.cshtml" />
     <Content Include="Views\Post\Details.cshtml" />
+    <Content Include="Views\Company\Index.cshtml" />
+    <Content Include="Views\Company\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
